Stop passing --illegal-access= to tests since it's going away in 17
PiperOrigin-RevId: 379619714